# SheafPNN

./: .gitignore  main.py  pyproject.toml
scgl/: README.md  __init__.py  detection.py  initialization.py  loss.py  model.py  operators.py  pyproject.toml  updates.py
scripts/: synth_exp.py
src/data/: __init__.py  generate.py
src/neural/: __init__.py  layers.py  model.py
src/operators/: __init__.py  laplacian.py
src/training/: __init__.py  scgl_init.py  train_sheaf_pnn.py  utils.py
